Assignment 5/ass5_13CS30041.output
Terminals which are not used

   STRUCT_KEYWORD
   TYPEDEF_KEYWORD
   UNION_KEYWORD


State 324 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INT_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | STRING_LITERAL
    6                   | '(' expression ')'

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' ')'
   10                   | postfix_expression '(' argument_expression_list ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression POINTER_OP IDENTIFIER
   13                   | postfix_expression INCREMENT_OP
   14                   | postfix_expression DECREMENT_OP
   15                   | '(' type_name ')' '{' initializer_list '}'
   16                   | '(' type_name ')' '{' initializer_list ',' '}'

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | INCREMENT_OP unary_expression
   21                 | DECREMENT_OP unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF_KEYWORD unary_expression
   24                 | SIZEOF_KEYWORD '(' type_name ')'

   25 unary_operator: '&'
   26               | '*'
   27               | '+'
   28               | '-'
   29               | '~'
   30               | '!'

   31 cast_expression: unary_expression
   32                | '(' type_name ')' cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression '*' cast_expression
   35                          | multiplicative_expression '/' cast_expression
   36                          | multiplicative_expression '%' cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression '+' multiplicative_expression
   39                    | additive_expression '-' multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_SHIFT additive_expression
   42                 | shift_expression RIGHT_SHIFT additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression '<' shift_expression
   45                      | relational_expression '>' shift_expression
   46                      | relational_expression LESS_EQ_OP shift_expression
   47                      | relational_expression GREATER_EQ_OP shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQ_OP relational_expression
   50                    | equality_expression NOT_EQ_OP relational_expression

   51 and_expression: equality_expression
   52               | and_expression '&' equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression '^' and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression '|' exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND_OP inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR_OP logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression '?' expression ':' conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: '='
   66                    | MUL_ASSIGNMENT
   67                    | DIV_ASSIGNMENT
   68                    | MOD_ASSIGNMENT
   69                    | ADD_ASSIGNMENT
   70                    | SUB_ASSIGNMENT
   71                    | LEFT_ASSIGNMENT
   72                    | RIGHT_ASSIGNMENT
   73                    | AND_ASSIGNMENT
   74                    | XOR_ASSIGNMENT
   75                    | OR_ASSIGNMENT

   76 expression: assignment_expression
   77           | expression ',' assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers ';'
   80            | declaration_specifiers init_declarator_list ';'

   81 declaration_specifiers: storage_class_specifier
   82                       | storage_class_specifier declaration_specifiers
   83                       | type_specifier
   84                       | type_specifier declaration_specifiers
   85                       | type_qualifier
   86                       | type_qualifier declaration_specifiers
   87                       | function_specifier
   88                       | function_specifier declaration_specifiers

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list ',' init_declarator

   91 init_declarator: declarator
   92                | declarator '=' initializer

   93 storage_class_specifier: EXTERN_KEYWORD
   94                        | STATIC_KEYWORD
   95                        | AUTO_KEYWORD
   96                        | REGISTER_KEYWORD

   97 type_specifier: VOID_KEYWORD
   98               | CHAR_KEYWORD
   99               | SHORT_KEYWORD
  100               | INT_KEYWORD
  101               | LONG_KEYWORD
  102               | FLOAT_KEYWORD
  103               | DOUBLE_KEYWORD
  104               | SIGNED_KEYWORD
  105               | UNSIGNED_KEYWORD
  106               | BOOL_KEYWORD
  107               | COMPLEX_KEYWORD
  108               | IMAGINARY_KEYWORD
  109               | enum_specifier

  110 specifier_qualifier_list: type_specifier
  111                         | type_specifier specifier_qualifier_list
  112                         | type_qualifier
  113                         | type_qualifier specifier_qualifier_list

  114 enum_specifier: ENUM_KEYWORD '{' enumerator_list '}'
  115               | ENUM_KEYWORD IDENTIFIER '{' enumerator_list '}'
  116               | ENUM_KEYWORD '{' enumerator_list ',' '}'
  117               | ENUM_KEYWORD IDENTIFIER '{' enumerator_list ',' '}'
  118               | ENUM_KEYWORD IDENTIFIER

  119 enumerator_list: enumerator
  120                | enumerator_list ',' enumerator

  121 enumerator: enumeration_constant
  122           | enumeration_constant '=' constant_expression

  123 enumeration_constant: IDENTIFIER

  124 type_qualifier: CONST_KEYWORD
  125               | RESTRICT_KEYWORD
  126               | VOLATILE_KEYWORD

  127 function_specifier: INLINE_KEYWORD

  128 declarator: pointer direct_declarator
  129           | direct_declarator

  130 direct_declarator: IDENTIFIER
  131                  | '(' declarator ')'
  132                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  133                  | direct_declarator '[' STATIC_KEYWORD type_qualifier_list_opt assignment_expression ']'
  134                  | direct_declarator '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'
  135                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  136                  | direct_declarator '(' parameter_type_list ')'
  137                  | direct_declarator '(' identifier_list_opt ')'

  138 identifier_list_opt: identifier_list
  139                    | /* empty */

  140 assignment_expression_opt: assignment_expression
  141                          | /* empty */

  142 type_qualifier_list_opt: type_qualifier_list
  143                        | /* empty */

  144 pointer: '*'
  145        | '*' type_qualifier_list
  146        | '*' pointer
  147        | '*' type_qualifier_list pointer

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 parameter_type_list: parameter_list
  151                    | parameter_list ',' ELLIPSIS

  152 parameter_list: parameter_declaration
  153               | parameter_list ',' parameter_declaration

  154 parameter_declaration: declaration_specifiers declarator
  155                      | declaration_specifiers

  156 identifier_list: IDENTIFIER
  157                | identifier_list ',' IDENTIFIER

  158 type_name: specifier_qualifier_list

  159 initializer: assignment_expression
  160            | '{' initializer_list '}'
  161            | '{' initializer_list ',' '}'

  162 initializer_list: initializer
  163                 | designation initializer
  164                 | initializer_list ',' initializer
  165                 | initializer_list ',' designation initializer

  166 designation: designator_list '='

  167 designator_list: designator
  168                | designator_list designator

  169 designator: '[' constant_expression ']'
  170           | '.' IDENTIFIER

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER ':' statement
  178                  | CASE_KEYWORD constant_expression ':' statement
  179                  | DEFAULT_KEYWORD ':' statement

  180 compound_statement: '{' '}'
  181                   | '{' block_item_list '}'

  182 block_item_list: block_item
  183                | block_item_list block_item

  184 block_item: declaration
  185           | statement

  186 expression_statement: ';'
  187                     | expression ';'

  188 selection_statement: IF_KEYWORD '(' expression ')' statement
  189                    | IF_KEYWORD '(' expression ')' statement ELSE_KEYWORD statement
  190                    | SWITCH_KEYWORD '(' expression ')' statement

  191 iteration_statement: WHILE_KEYWORD '(' expression ')' statement
  192                    | DO_KEYWORD statement WHILE_KEYWORD '(' expression ')' ';'
  193                    | FOR_KEYWORD '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  194                    | FOR_KEYWORD '(' declaration expression_opt ';' expression_opt ')' statement

  195 expression_opt: expression
  196               | /* empty */

  197 jump_statement: GOTO_KEYWORD IDENTIFIER ';'
  198               | CONTINUE_KEYWORD ';'
  199               | BREAK_KEYWORD ';'
  200               | RETURN_KEYWORD ';'
  201               | RETURN_KEYWORD expression ';'

  202 translation_unit: external_declaration
  203                 | translation_unit external_declaration

  204 external_declaration: function_definition
  205                     | declaration

  206 function_definition: declaration_specifiers declarator declaration_list compound_statement
  207                    | declaration_specifiers declarator compound_statement

  208 declaration_list: declaration
  209                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 30
'%' (37) 36
'&' (38) 25 52
'(' (40) 6 9 10 15 16 24 32 131 136 137 188 189 190 191 192 193 194
')' (41) 6 9 10 15 16 24 32 131 136 137 188 189 190 191 192 193 194
'*' (42) 26 34 135 144 145 146 147
'+' (43) 27 38
',' (44) 16 18 77 90 116 117 120 151 153 157 161 164 165
'-' (45) 28 39
'.' (46) 11 170
'/' (47) 35
':' (58) 62 177 178 179
';' (59) 79 80 186 187 192 193 194 197 198 199 200 201
'<' (60) 44
'=' (61) 65 92 122 166
'>' (62) 45
'?' (63) 62
'[' (91) 8 132 133 134 135 169
']' (93) 8 132 133 134 135 169
'^' (94) 54
'{' (123) 15 16 114 115 116 117 160 161 180 181
'|' (124) 56
'}' (125) 15 16 114 115 116 117 160 161 180 181
'~' (126) 29
error (256)
RESTRICT_KEYWORD (258) 125
UNSIGNED_KEYWORD (259) 105
AUTO_KEYWORD (260) 95
ENUM_KEYWORD (261) 114 115 116 117 118
BREAK_KEYWORD (262) 199
EXTERN_KEYWORD (263) 93
RETURN_KEYWORD (264) 200 201
VOID_KEYWORD (265) 97
CASE_KEYWORD (266) 178
FLOAT_KEYWORD (267) 102
SHORT_KEYWORD (268) 99
VOLATILE_KEYWORD (269) 126
CHAR_KEYWORD (270) 98
FOR_KEYWORD (271) 193 194
SIGNED_KEYWORD (272) 104
WHILE_KEYWORD (273) 191 192
CONST_KEYWORD (274) 124
GOTO_KEYWORD (275) 197
SIZEOF_KEYWORD (276) 23 24
BOOL_KEYWORD (277) 106
CONTINUE_KEYWORD (278) 198
IF_KEYWORD (279) 188 189
STATIC_KEYWORD (280) 94 133 134
COMPLEX_KEYWORD (281) 107
DEFAULT_KEYWORD (282) 179
INLINE_KEYWORD (283) 127
STRUCT_KEYWORD (284)
IMAGINARY_KEYWORD (285) 108
DO_KEYWORD (286) 192
INT_KEYWORD (287) 100
SWITCH_KEYWORD (288) 190
DOUBLE_KEYWORD (289) 103
LONG_KEYWORD (290) 101
TYPEDEF_KEYWORD (291)
ELSE_KEYWORD (292) 189
REGISTER_KEYWORD (293) 96
UNION_KEYWORD (294)
IDENTIFIER (295) 1 11 12 115 117 118 123 130 156 157 170 177 197
INT_CONSTANT (296) 2
FLOAT_CONSTANT (297) 3
CHAR_CONSTANT (298) 4
STRING_LITERAL (299) 5
POINTER_OP (300) 12
INCREMENT_OP (301) 13 20
DECREMENT_OP (302) 14 21
LEFT_SHIFT (303) 41
RIGHT_SHIFT (304) 42
LESS_EQ_OP (305) 46
GREATER_EQ_OP (306) 47
EQ_OP (307) 49
NOT_EQ_OP (308) 50
AND_OP (309) 58
OR_OP (310) 60
ELLIPSIS (311) 151
MUL_ASSIGNMENT (312) 66
DIV_ASSIGNMENT (313) 67
MOD_ASSIGNMENT (314) 68
ADD_ASSIGNMENT (315) 69
SUB_ASSIGNMENT (316) 70
LEFT_ASSIGNMENT (317) 71
RIGHT_ASSIGNMENT (318) 72
AND_ASSIGNMENT (319) 73
XOR_ASSIGNMENT (320) 74
OR_ASSIGNMENT (321) 75


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
primary_expression (92)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expression (93)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 8 9 10 11 12 13
    14 19
argument_expression_list (94)
    on left: 17 18, on right: 10 18
unary_expression (95)
    on left: 19 20 21 22 23 24, on right: 20 21 23 31 64
unary_operator (96)
    on left: 25 26 27 28 29 30, on right: 22
cast_expression (97)
    on left: 31 32, on right: 22 32 33 34 35 36
multiplicative_expression (98)
    on left: 33 34 35 36, on right: 34 35 36 37 38 39
additive_expression (99)
    on left: 37 38 39, on right: 38 39 40 41 42
shift_expression (100)
    on left: 40 41 42, on right: 41 42 43 44 45 46 47
relational_expression (101)
    on left: 43 44 45 46 47, on right: 44 45 46 47 48 49 50
equality_expression (102)
    on left: 48 49 50, on right: 49 50 51 52
and_expression (103)
    on left: 51 52, on right: 52 53 54
exclusive_or_expression (104)
    on left: 53 54, on right: 54 55 56
inclusive_or_expression (105)
    on left: 55 56, on right: 56 57 58
logical_and_expression (106)
    on left: 57 58, on right: 58 59 60
logical_or_expression (107)
    on left: 59 60, on right: 60 61 62
conditional_expression (108)
    on left: 61 62, on right: 62 63 78
assignment_expression (109)
    on left: 63 64, on right: 17 18 64 76 77 133 134 140 159
assignment_operator (110)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 64
expression (111)
    on left: 76 77, on right: 6 8 62 77 187 188 189 190 191 192 195
    201
constant_expression (112)
    on left: 78, on right: 122 169 178
declaration (113)
    on left: 79 80, on right: 184 194 205 208 209
declaration_specifiers (114)
    on left: 81 82 83 84 85 86 87 88, on right: 79 80 82 84 86 88 154
    155 206 207
init_declarator_list (115)
    on left: 89 90, on right: 80 90
init_declarator (116)
    on left: 91 92, on right: 89 90
storage_class_specifier (117)
    on left: 93 94 95 96, on right: 81 82
type_specifier (118)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108 109,
    on right: 83 84 110 111
specifier_qualifier_list (119)
    on left: 110 111 112 113, on right: 111 113 158
enum_specifier (120)
    on left: 114 115 116 117 118, on right: 109
enumerator_list (121)
    on left: 119 120, on right: 114 115 116 117 120
enumerator (122)
    on left: 121 122, on right: 119 120
enumeration_constant (123)
    on left: 123, on right: 121 122
type_qualifier (124)
    on left: 124 125 126, on right: 85 86 112 113 148 149
function_specifier (125)
    on left: 127, on right: 87 88
declarator (126)
    on left: 128 129, on right: 91 92 131 154 206 207
direct_declarator (127)
    on left: 130 131 132 133 134 135 136 137, on right: 128 129 132
    133 134 135 136 137
identifier_list_opt (128)
    on left: 138 139, on right: 137
assignment_expression_opt (129)
    on left: 140 141, on right: 132
type_qualifier_list_opt (130)
    on left: 142 143, on right: 132 133 135
pointer (131)
    on left: 144 145 146 147, on right: 128 146 147
type_qualifier_list (132)
    on left: 148 149, on right: 134 142 145 147 149
parameter_type_list (133)
    on left: 150 151, on right: 136
parameter_list (134)
    on left: 152 153, on right: 150 151 153
parameter_declaration (135)
    on left: 154 155, on right: 152 153
identifier_list (136)
    on left: 156 157, on right: 138 157
type_name (137)
    on left: 158, on right: 15 16 24 32
initializer (138)
    on left: 159 160 161, on right: 92 162 163 164 165
initializer_list (139)
    on left: 162 163 164 165, on right: 15 16 160 161 164 165
designation (140)
    on left: 166, on right: 163 165
designator_list (141)
    on left: 167 168, on right: 166 168
designator (142)
    on left: 169 170, on right: 167 168
statement (143)
    on left: 171 172 173 174 175 176, on right: 177 178 179 185 188
    189 190 191 192 193 194
labeled_statement (144)
    on left: 177 178 179, on right: 171
compound_statement (145)
    on left: 180 181, on right: 172 206 207
block_item_list (146)
    on left: 182 183, on right: 181 183
block_item (147)
    on left: 184 185, on right: 182 183
expression_statement (148)
    on left: 186 187, on right: 173
selection_statement (149)
    on left: 188 189 190, on right: 174
iteration_statement (150)
    on left: 191 192 193 194, on right: 175
expression_opt (151)
    on left: 195 196, on right: 193 194
jump_statement (152)
    on left: 197 198 199 200 201, on right: 176
translation_unit (153)
    on left: 202 203, on right: 0 203
external_declaration (154)
    on left: 204 205, on right: 202 203
function_definition (155)
    on left: 206 207, on right: 204
declaration_list (156)
    on left: 208 209, on right: 206 209


state 0

    0 $accept: . translation_unit $end

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


state 1

  125 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 125 (type_qualifier)


state 2

  105 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 105 (type_specifier)


state 3

   95 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 95 (storage_class_specifier)


state 4

  114 enum_specifier: ENUM_KEYWORD . '{' enumerator_list '}'
  115               | ENUM_KEYWORD . IDENTIFIER '{' enumerator_list '}'
  116               | ENUM_KEYWORD . '{' enumerator_list ',' '}'
  117               | ENUM_KEYWORD . IDENTIFIER '{' enumerator_list ',' '}'
  118               | ENUM_KEYWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 32
    '{'         shift, and go to state 33


state 5

   93 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 93 (storage_class_specifier)


state 6

   97 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 97 (type_specifier)


state 7

  102 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 102 (type_specifier)


state 8

   99 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 99 (type_specifier)


state 9

  126 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 126 (type_qualifier)


state 10

   98 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 98 (type_specifier)


state 11

  104 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 104 (type_specifier)


state 12

  124 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 124 (type_qualifier)


state 13

  106 type_specifier: BOOL_KEYWORD .

    $default  reduce using rule 106 (type_specifier)


state 14

   94 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 94 (storage_class_specifier)


state 15

  107 type_specifier: COMPLEX_KEYWORD .

    $default  reduce using rule 107 (type_specifier)


state 16

  127 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 127 (function_specifier)


state 17

  108 type_specifier: IMAGINARY_KEYWORD .

    $default  reduce using rule 108 (type_specifier)


state 18

  100 type_specifier: INT_KEYWORD .

    $default  reduce using rule 100 (type_specifier)


state 19

  103 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 103 (type_specifier)


state 20

  101 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 101 (type_specifier)


state 21

   96 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 96 (storage_class_specifier)


state 22

  205 external_declaration: declaration .

    $default  reduce using rule 205 (external_declaration)


state 23

   79 declaration: declaration_specifiers . ';'
   80            | declaration_specifiers . init_declarator_list ';'
  206 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  207                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35
    '*'         shift, and go to state 36
    ';'         shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


state 24

   81 declaration_specifiers: storage_class_specifier .
   82                       | storage_class_specifier . declaration_specifiers

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


state 25

   83 declaration_specifiers: type_specifier .
   84                       | type_specifier . declaration_specifiers

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


state 26

  109 type_specifier: enum_specifier .

    $default  reduce using rule 109 (type_specifier)


state 27

   85 declaration_specifiers: type_qualifier .
   86                       | type_qualifier . declaration_specifiers

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


state 28

   87 declaration_specifiers: function_specifier .
   88                       | function_specifier . declaration_specifiers

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


state 29

    0 $accept: translation_unit . $end
  203 translation_unit: translation_unit . external_declaration

    $end               shift, and go to state 47
    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


state 30

  202 translation_unit: external_declaration .

    $default  reduce using rule 202 (translation_unit)


state 31

  204 external_declaration: function_definition .

    $default  reduce using rule 204 (external_declaration)


state 32

  115 enum_specifier: ENUM_KEYWORD IDENTIFIER . '{' enumerator_list '}'
  117               | ENUM_KEYWORD IDENTIFIER . '{' enumerator_list ',' '}'
  118               | ENUM_KEYWORD IDENTIFIER .

    '{'  shift, and go to state 49

    $default  reduce using rule 118 (enum_specifier)


state 33

  114 enum_specifier: ENUM_KEYWORD '{' . enumerator_list '}'
  116               | ENUM_KEYWORD '{' . enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 50

    enumerator_list       go to state 51
    enumerator            go to state 52
    enumeration_constant  go to state 53


state 34

  130 direct_declarator: IDENTIFIER .

    $default  reduce using rule 130 (direct_declarator)


state 35

  131 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35
    '*'         shift, and go to state 36

    declarator         go to state 54
    direct_declarator  go to state 41
    pointer            go to state 42


state 36

  144 pointer: '*' .
  145        | '*' . type_qualifier_list
  146        | '*' . pointer
  147        | '*' . type_qualifier_list pointer

    RESTRICT_KEYWORD  shift, and go to state 1
    VOLATILE_KEYWORD  shift, and go to state 9
    CONST_KEYWORD     shift, and go to state 12
    '*'               shift, and go to state 36

    $default  reduce using rule 144 (pointer)

    type_qualifier       go to state 55
    pointer              go to state 56
    type_qualifier_list  go to state 57


state 37

   79 declaration: declaration_specifiers ';' .

    $default  reduce using rule 79 (declaration)


state 38

   80 declaration: declaration_specifiers init_declarator_list . ';'
   90 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 58
    ';'  shift, and go to state 59


state 39

   89 init_declarator_list: init_declarator .

    $default  reduce using rule 89 (init_declarator_list)


state 40

   91 init_declarator: declarator .
   92                | declarator . '=' initializer
  206 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  207                    | declaration_specifiers declarator . compound_statement

    RESTRICT_KEYWORD   shift, and go to state 1
    UNSIGNED_KEYWORD   shift, and go to state 2
    AUTO_KEYWORD       shift, and go to state 3
    ENUM_KEYWORD       shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    REGISTER_KEYWORD   shift, and go to state 21
    '{'                shift, and go to state 60
    '='                shift, and go to state 61

    $default  reduce using rule 91 (init_declarator)

    declaration              go to state 62
    declaration_specifiers   go to state 63
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    compound_statement       go to state 64
    declaration_list         go to state 65


state 41
